Fixing the layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,7 @@ a {
   font-size: 1.8rem;
   font-weight: 600;
   margin: 1rem 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -740,10 +740,11 @@ a {
 }
 
 .domain__list {
+  color: var(--color-headings);
   display: grid;
   grid-template-rows: repeat(2, 6rem);
   grid-template-columns: repeat(2, 1fr);
-  font-size: 2rem;
+  font-size: 1.6rem;
   font-weight: 600;
   justify-items: center;
   max-width: 900px;
